k8s-basics/cheat_sheet/kubernetes/app-fin.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: demoapp
  labels:
    app: demoapp
    version: 1.0.0
spec: 
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: demoapp
  template: 
    metadata: 
      labels: 
        app: demoapp
    spec: 
      containers: 
        - name: demoapp
          image: eu.gcr.io/kot-test-207914/devfest-workshop/app:1
          imagePullPolicy: Always
          ports: 
            - containerPort: 8000
          livenessProbe:
            failureThreshold: 1
            initialDelaySeconds: 30
            periodSeconds: 20
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=_CLOUDSQL_CONNECTION_STRING_=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
